syntax = "proto3";

package animal;

option java_package = "com.proto.animal";
option java_multiple_files = true;

message Animal {
  string name = 1;
  string classes = 2;
}

message AnimalReq {
  Animal animal = 1;
}

message AnimalRes {
  string result = 1;
}

message AnimalManyTimesReq {
  Animal animal = 1;
}

message AnimalManyTimesRes {
  string result = 1;
}

message AnimalLongReq {
  Animal animal = 1;
}

message AnimalLongRes {
  string result = 1;
}

message AnimalEveryoneReq{
  Animal animal = 1;
}

message AnimalEveryoneRes {
  string result = 1;
}

message AnimalWithDeadlineReq{
  Animal animal = 1;
}

message AnimalWithDeadlineRes {
  string result = 1;
}

service AnimalService {
  // Unary
  rpc setClasses(AnimalReq) returns (AnimalRes) {};

  // Server Streaming
  rpc setManyTimesClasses(AnimalManyTimesReq) returns (stream AnimalManyTimesRes) {};

  // Client Streaming
  rpc setLongClasses(stream AnimalLongReq) returns (AnimalLongRes) {};

  // BiDi Streaming
  rpc setClassesEveryone(stream AnimalEveryoneReq) returns (stream AnimalEveryoneRes) {}

  // RPC with deadline
  // THIS RPC WILL COMPLiTE IN NO THAN LESS 300 MS
  rpc setClassesWithDeadline(AnimalWithDeadlineReq) returns (AnimalWithDeadlineRes) {}
}

